<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="app.ch.currencyconverter.quote.QuoteFragment" />

        <variable
            name="viewModel"
            type="app.ch.currencyconverter.quote.QuoteViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:afterTextChanged="@{() -> viewModel.getQuotes()}"
            android:autofillHints="@string/hint_amount"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:text="@={viewModel.amount}" />

        <TextView
            android:id="@+id/tvSelectedCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnChange"
            android:layout_alignBottom="@+id/btnChange"
            android:gravity="center_vertical"
            android:text="@{viewModel.selectedCode}"
            android:textSize="@dimen/textSizeLarge"
            android:textStyle="bold"
            tools:text="HKD" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_alignParentEnd="true"
            android:onClick="@{() -> fragment.navigateToCurrency()}"
            android:text="@string/btn_select" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnChange"
            android:layout_marginTop="@dimen/spacing"
            android:splitMotionEvents="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_quote" />
    </RelativeLayout>
</layout>
