<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/quote">

    <fragment
        android:id="@+id/quote"
        android:name="app.ch.currencyconverter.quote.QuoteFragment"
        android:label="Quote"
        tools:layout="@layout/fragment_quote">

        <action
            android:id="@+id/to_currency"
            app:destination="@id/currency" />
    </fragment>

    <dialog
        android:id="@+id/currency"
        android:name="app.ch.currencyconverter.currency.CurrencyDialog"
        android:label="Currency"
        tools:layout="@layout/dialog_currency" />
</navigation>
